adding BIP39 generator

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <p><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html">Warp Brain Wallet</a>
 <p><a href="bit2factor.com.html">BIP38</a>
+<p><a href="bip39-standalone.html">BIP39 Generator</a>
 <p><a href="bitcoinpaperwallet/generate-wallet.html">Bitcoinpaperwallet</a>
 <p><a href="bitaddress.org.html">Old School Brain Wallet</a>
 </body>
