--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html">Warp Brain Wallet</a>
 <p><a href="bit2factor.com.html">BIP38</a>
 <p><a href="BIP39Generator.html">BIP39 Generator</a>
-<p><a href="bip32JP.github.io-master/english/index.html">BIP39 Generator</a>
+<p><a href="bip32JP.github.io-master/english/index.html">BIP39 Dice Generator</a>
 <p><a href="bitcoinpaperwallet/generate-wallet.html">Bitcoinpaperwallet</a>
 <p><a href="bitaddress.org.html">Old School Brain Wallet</a>
 </body>
