--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p><a href="bip32JP.github.io-master/english/index.html">BIP39 Dice Generator</a>
 <p><a href="bitcoinpaperwallet/generate-wallet.html">Bitcoinpaperwallet</a>
 <p><a href="bitaddress.org.html">Old School Brain Wallet</a>
+<p><a href="coinbin/index.html">Create & Sign Raw Tx (coinbin)</a>
 </body>
 </html
 
