--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <p><a href="bit2factor.com.html">BIP38</a>
   <p><a href="BIP39Generator.html">BIP39 Generator</a>
   <p><a href="bip32JP.github.io-master/english/index.html">BIP39 Dice Generator</a>
-  <p><a href="bitcoinpaperwallet/generate-wallet.html">Bitcoinpaperwallet</a>
-  <p><a href="bitaddress.org.html">Old School Brain Wallet</a>
-  <p><a href="brainwalletX.github.io/index.html">Brainwallet.org Clone</a>
+  <p><a href="bitcoinpaperwallet/generate-wallet.html">Bitcoinpaperwallet.com Copy</a>
+  <p><a href="bitaddress.org.html">Bitaddress.org Copy</a>
+  <p><a href="brainwalletX.github.io/index.html">Brainwallet.org Copy</a>
   <p><a href="coinbin/index.html">Create & Sign Raw Tx (coinbin)</a>
 </body>
 </html
