--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Immutable web utilities</title>
   </head>
 <body>
-  <p><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html">Warp Brain Wallet</a>
-  <p><a href="bit2factor.com.html" target=_blank>BIP38 Utilities</a>
-  <p><a href="BIP39Generator.html" target=_blank>BIP39 Generator</a>
+  <p><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a>
   <p><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a>
   <p><a href="bitcoinpaperwallet/generate-wallet.html" target=_blank>Bitcoinpaperwallet.com Copy</a>
   <p><a href="bitaddress.org.html" target=_blank>Bitaddress.org Copy</a>
   <p><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a>
-  <p><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a>
+  <p><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html" target=_blan>Warp Brain Wallet</a>
+  <p><a href="bit2factor.com.html" target=_blank>BIP38 Utilities</a>
+  <p><a href="BIP39Generator.html" target=_blank>BIP39 Generator</a>
 </body>
 </html
 
