Adding 18 words option

--- a/bip32JP.github.io-master/english/index.html
+++ b/bip32JP.github.io-master/english/index.html
@@ -111,8 +111,9 @@
                       </div>
                       <p />
                       <form onsubmit="return false;">
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12 checked/> 12 words (need >128 bits of Entropy)
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 /> 24 words (need >256 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12 checked/> 12 words (need >= 128 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=18/> 18 words (need >= 192 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 /> 24 words (need >= 256 bits of Entropy)
                       </form>
                     </div>
                   </div>
