--- a/bip32JP.github.io-master/english/index.html
+++ b/bip32JP.github.io-master/english/index.html
@@ -76,7 +76,6 @@
                     <label class="btn btn-default" title="Base58-encoded"><input id="from_key" name="gen_from" type="radio" />BIP32 Key</label>
                   </div>
                   &nbsp;&nbsp;<span class="help-inline" id="gen_from_msg"></span>
-
                 </div>
               </div>-->
               <div class="form-group">
@@ -89,9 +88,9 @@
                       </div>
                       <p />
                       <form onsubmit="return false;">
-                          <input type="radio" name="base" id="ent_base" value=2 /> Base 2 (0-1) (For 2-sided coin)
-                          <input type="radio" name="base" id="ent_base" value=6 /> Base 6 (0-5) (For 6-sided dice)
-                          <input type="radio" name="base" id="ent_base" value=16 checked/> Base 16 (0-9,A-F) (For 16-sided dice)
+                          <input type="radio" name="base" id="ent_base" value=2 checked/> Base 2 (0-1) (For 2-sided coin)
+                          <input type="radio" name="base" id="ent_base" value=6 checked/> Base 6 (0-5) (For 6-sided dice)
+                          <input type="radio" name="base" id="ent_base" value=16 /> Base 16 (0-9,A-F) (For 16-sided dice)
                           <input type="radio" name="base" id="ent_base" value=20 /> Base 20 (0-9,A-J) (For 20-sided dice)
                       </form>
                     </div>
@@ -111,9 +110,8 @@
                       </div>
                       <p />
                       <form onsubmit="return false;">
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12/> 12 words (need >= 128 bits of Entropy)
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=18 /> 18 words (need >= 192 bits of Entropy)
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 checked/> 24 words (need >= 256 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12 checked/> 12 words (need >128 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 /> 24 words (need >256 bits of Entropy)
                       </form>
                     </div>
                   </div>
@@ -329,4 +327,3 @@
     });
   </script>
 </html>
-
