--- a/bip32JP.github.io-master/english/index.html
+++ b/bip32JP.github.io-master/english/index.html
@@ -88,9 +88,9 @@
                       </div>
                       <p />
                       <form onsubmit="return false;">
-                          <input type="radio" name="base" id="ent_base" value=2 checked/> Base 2 (0-1) (For 2-sided coin)
-                          <input type="radio" name="base" id="ent_base" value=6 checked/> Base 6 (0-5) (For 6-sided dice)
-                          <input type="radio" name="base" id="ent_base" value=16 /> Base 16 (0-9,A-F) (For 16-sided dice)
+                          <input type="radio" name="base" id="ent_base" value=2 /> Base 2 (0-1) (For 2-sided coin)
+                          <input type="radio" name="base" id="ent_base" value=6 /> Base 6 (0-5) (For 6-sided dice)
+                          <input type="radio" name="base" id="ent_base" value=16 checked/> Base 16 (0-9,A-F) (For 16-sided dice)
                           <input type="radio" name="base" id="ent_base" value=20 /> Base 20 (0-9,A-J) (For 20-sided dice)
                       </form>
                     </div>
@@ -105,13 +105,13 @@
                       <div class="input-group">
                         <input class="form-control" onClick="this.setSelectionRange(0, this.value.length)" id="bip32_source_passphrase" type="text" />
                         <div class="input-group-addon" style="height: 34px;">
-                          <input type="checkbox" id="checkbox_change_language" checked /> English Phrase
+                          <input type="checkbox" id="checkbox_change_language" checked/> English Phrase
                         </div>
                       </div>
                       <p />
                       <form onsubmit="return false;">
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12 checked/> 12 words (need >128 bits of Entropy)
-                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 /> 24 words (need >256 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=12 /> 12 words (need >128 bits of Entropy)
+                          <input type="radio" name="wordcnt" id="wordcnt_id" value=24 checked/> 24 words (need >256 bits of Entropy)
                       </form>
                     </div>
                   </div>
