--- a/RIPEMD160/RIPEMD160.html
+++ b/RIPEMD160/RIPEMD160.html
@@ -43,7 +43,7 @@ function dohash() {
 <div>
 <label for="inputText">Input Text:</label><br />
 <textarea style="width:100%;" cols="75" rows="10" id="inputText"></textarea><br />
-<input type="button" onclick="dohash()" value="Go" /><br />
+<input type="button" onclick="dohash()" value="HASH" /><br />
 <label for="outputText">Output Hash:</label><br />
 <textarea style="width:100%;" cols="75" rows="2" id="outputText"></textarea>
 </div>
