--- a/RIPEMD160/RIPEMD160.html
+++ b/RIPEMD160/RIPEMD160.html
@@ -29,7 +29,7 @@ h3 { font-size: 1.1em; text-decoration: none; color: #000; }
 <div>
 </div>
 
-<h2>RIPEMD</h2>
+<h2>RIPEMD-160</h2>
 
 <script type="text/javascript">
 /* <![CDATA[ */
