--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a>
   <p><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a>
   <p><a href="bitcoinpaperwallet/generate-wallet.html" target=_blank>Bitcoinpaperwallet.com Copy</a>
-  <p><a href="hashes_encoders/index.html" target=_blank>Hashes and Encoders Copy</a>
+  <p><a href="hashes_encoders/index.html" target=_blank>Hashes and Encoders Copy of github.com/emn178</a>
   <p><a href="RIPEMD160/RIPEMD160.html" target=_blank>RIPEMD160</a>
   <p><a href="bitaddress.org.html" target=_blank>Bitaddress.org Copy</a>
   <p><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a>
