--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   </head>
 <body>
   <ul style="font-size:30px; font-family: courier new">
-    <li><p><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a>
-    <li><p><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a>
-    <li><p><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a>
-    <li><p><a href="bitcoinpaperwallet/generate-wallet.html" target=_blank>Bitcoinpaperwallet.com Copy</a>
-    <li><p><a href="hashes_encoders/index.html" target=_blank>Hashes and Encoders Copy of github.com/emn178</a>
-    <li><p><a href="RIPEMD160/RIPEMD160.html" target=_blank>RIPEMD160</a>
-    <li><p><a href="bitaddress.org.html" target=_blank>Bitaddress.org Copy</a>
-    <li><p><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a>
-    <li><p><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a>
-    <li><p><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a>
+    <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
+    <li><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a></li>
+    <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
+    <li><a href="bitcoinpaperwallet/generate-wallet.html" target=_blank>Bitcoinpaperwallet.com Copy</a></li>
+    <li><a href="hashes_encoders/index.html" target=_blank>Hashes and Encoders Copy of github.com/emn178</a></li>
+    <li><a href="RIPEMD160/RIPEMD160.html" target=_blank>RIPEMD160</a></li>
+    <li><a href="bitaddress.org.html" target=_blank>Bitaddress.org Copy</a></li>
+    <li><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a></li>
+    <li><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
+    <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
   </ul>
 </body>
-</html
+    </html>
 
