--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Immutable web utilities</title>
   </head>
 <body>
-  <ul style="font-size:30px; font-family: courier new">
+  <ul style="font-size:12px; font-family: georgia; text-decoration: none">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
     <li><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a></li>
     <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
@@ -17,5 +17,5 @@
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
   </ul>
 </body>
-    </html>
+</html>
 
