--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="RIPEMD160/RIPEMD160.html" target=_blank>RIPEMD160</a></li>
     <li><a href="bitaddress.org.html" target=_blank>Bitaddress.org Copy</a></li>
     <li><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a></li>
-    <li><a href="warp_brain_wallet_1.0.8_SHA256_5111a723fe008dbf628237023e6f2de72c7953f8bb4265d5c16fc9fd79384b7a.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
+    <li><a href="warp_brain_wallet.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
   </ul>
 </body>
