--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <ul style="font-size:12px; font-family: georgia; text-decoration: none">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
-    <li><a href="coinbin/index.html" target=_blank>Create & Sign Raw Tx by coinb.in Copy</a></li>
+    <li><a href="coinbin/index.html" target=_blank>Create And Sign Raw / Advanced Tx Copy of coinb.in</a></li>
     <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
     <li><a href="bitcoinpaperwallet/generate-wallet.html" target=_blank>Bitcoinpaperwallet.com Copy</a></li>
     <li><a href="hashes_encoders/index.html" target=_blank>Hashes and Encoders Copy of github.com/emn178</a></li>
