--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Immutable web utilities</title>
   </head>
 <body>
-  <ul style="font-size:18px; font-family: Georgia; font-style: bold; text-decoration: none">
+  <ul style="border: 0; font-size:18px; font-family: Georgia; font-style: bold; text-decoration: none">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
     <li><a href="coinbin/index.html" target=_blank>Create And Sign Raw / Advanced Tx Copy of coinb.in</a></li>
     <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
