--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Immutable web utilities</title>
     <style>
-      body { background-color: black }
+      body { background-color: black; line-height: 18px }
       a { color: lime; text-decoration: none; }
     </style>
   </head>
@@ -11,7 +11,7 @@
   <p>
   <h1>Variouls Tools and Utilities</h1>
   <p>
-  <ul style="font-size:20px; font-family: Georgia;">
+  <ul style="font-size:18px; font-family: Share Tech Mono;">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
     <li><a href="coinbin/index.html" target=_blank>Create And Sign Raw / Advanced Tx Copy of coinb.in</a></li>
     <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
