--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a></li>
     <li><a href="warp_brain_wallet.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
-    <li><a href="archvie.zip" target=_blank>Download Tools as a Zip Archive</a></li>
+    <li><a href="crypto_web_tools.zip" target=_blank>Download Crypto Web Tools</a></li>
   </ul>
 </body>
 </html>
