--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <p>
-  <h1>Variouls Tools and Utilities</h1>
+  <span style="font-size:14px; font-family: Monospace; text-align: center">Variouls Tools and Utilities</span>
   <p>
   <ol type="1" style="font-size:14px; font-family: Monospace;">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
@@ -23,7 +23,7 @@
     <li><a href="warp_brain_wallet.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
     <li><p></li>
-    <li><a href="crypto_web_tools.zip" target=_blank>Download Crypto Web Tools</a></li>
+    <li><a href="crypto_web_tools.zip" target=_blank>Download All</a></li>
   </ol>
 </body>
 </html>
