--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <p>
-  <span style="font-size:14px; font-family: Monospace; text-align: center">Variouls Tools and Utilities</span>
+  <span style="color: lime; font-size:20px; font-family: Monospace; text-align: center">Web Crypto Tools</span>
   <p>
   <ol type="1" style="font-size:14px; font-family: Monospace;">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
