--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <title>Immutable web utilities</title>
     <style>
-      body { background-color: black; line-height: 20px }
-      a { color: lime; text-decoration: none; }
+      body { background-color: black; line-height: 20px; color: lime }
+      a { text-decoration: none; }
     </style>
   </head>
 <body>
