--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Immutable web utilities</title>
     <style>
       body { background-color: black; line-height: 20px; color: lime }
-      a { text-decoration: none; }
+      a { color: lime; text-decoration: none; }
     </style>
   </head>
 <body>
@@ -22,7 +22,6 @@
     <li><a href="brainwalletX.github.io/index.html" target=_blank>Brainwallet.org Copy</a></li>
     <li><a href="warp_brain_wallet.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
-    <li><p></li>
     <li><a href="crypto_web_tools.zip" target=_blank>Download All</a></li>
   </ol>
 </body>
