--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>
   <ol type="1" style="font-size:14px; font-family: Monospace;">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
+    <li><a href="shamir-standalone.html" target=_blank>Shamir Generator / Converter Copy of iancoleman.github.io/slip39/</a></li>
     <li><a href="MyEtherWallet/index.html" target=_blank>MyEtherWallet / Copy of github.com/kvhnuke/etherwallet/releases/tag/v3.9.8.5</a></li>
     <li><a href="coinbin/index.html" target=_blank>Create And Sign Raw / Advanced Tx Copy of coinb.in</a></li>
     <li><a href="double_spender/index.html" target=_blank>Double Spender / Copy of https://github.com/ankleslapper/Double-Spender/ </a></li>
