--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>
   <ol type="1" style="font-size:14px; font-family: Monospace;">
     <li><a href="BIP39/bip39-standalone.html" target=_blank>BIP39 Generator / Converter Copy of iancoleman.github.io/bip39/</a></li>
-    <li><a href="shamir-standalone.html" target=_blank>Shamir Generator / Converter Copy of iancoleman.github.io/shamir/</a></li>
+    <li><a href="slip39-standalone.html" target=_blank>SLIP39 Shamir Generator / Converter Copy of iancoleman.github.io/slip39/</a></li>
     <li><a href="coinbin/index.html" target=_blank>Create And Sign Raw / Advanced Tx Copy of coinb.in</a></li>
     <li><a href="double_spender/index.html" target=_blank>Double Spender / Copy of https://github.com/ankleslapper/Double-Spender/ </a></li>
     <li><a href="bip32JP.github.io-master/english/index.html" target=_blank>Entropy/Dice Generator for BIP39</a></li>
