--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="warp_brain_wallet.html" target=_blan>Warp Brain Wallet Copy of github.com/keybase/warpwallet</a></li>
     <li><a href="bit2factor.com.html" target=_blank>BIP38 Utilities Copy of bit2factor.com</a></li>
     <li><a href="crypto_web_tools.zip" target=_blank>Download All</a></li>
-    <li><a href="instructions.7z" target=_blank>Instructions for Joey Kunin</a></li>
+    <li><a href="instructions-20200810.7z" target=_blank>Instructions for Joey Kunin</a></li>
   </ol>
 </body>
 </html>
